# drafthelper

./: .gitignore  README.md
drafthelper-app/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
drafthelper-app/data/: save_files2023-05-12-13-16.txt  save_files2023-05-13-23-23.txt  save_files2023-05-14-01-34.txt  save_files2023-05-14-01-36.txt  save_files2023-05-14-01-40.txt  save_files2023-05-14-10-30.txt  save_files2023-05-14-10-32.txt  save_files2023-05-14-10-35.txt  save_files2023-05-14-20-46.txt  save_files2023-05-14-20-53.txt  save_files2023-05-14-20-55.txt  save_files2023-05-14-21-25.txt
drafthelper-app/data/csv/: Half_PPR.csv  Standard.csv
drafthelper-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
drafthelper-app/src/: 2023-05-04-11-55.txt  consensusranking.py  index.py  index_txt.py  interface.py  roster.py
drafthelper-app/src/csv/: rankings.csv
drafthelper-app/src/entities/: consensusranking.py  roster.py  settings.py
drafthelper-app/src/interface/: draft_view.py  end_view.py  initialize.py  settings_view.py  ui.py
drafthelper-app/src/repositories/: ranking_loader.py  roster_saver.py
drafthelper-app/src/save_files/: 2023-05-04-12-03.txt  2023-05-04-12-05.txt  2023-05-11-09-45.txt  2023-05-11-10-53.txt  2023-05-11-11-00.txt
drafthelper-app/src/services/: consensusranking.py  draft.py  interface.py  roster.py  settings.py
drafthelper-app/src/tests/: consensusranking_test.py  draft_test.py  interface_test.py  roster_test.py  settings_test.py
(+16 files in other folders)
