[tool.poetry]
name = "drafthelper-app"
version = "0.1.0"
description = ""
authors = ["Eero-Pekka Karppinen <89537846+eepek@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
